<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="selfieErrorFragment" type="com.fourthline.assignment.presentation.view.SelfieErrorFragment"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selfieErrorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.SelfieErrorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/selfieResultsButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:background="@drawable/layout_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelSelfieButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:height="64dp"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="@{selfieErrorFragment::onCancelSelfieButtonClick}"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/hawkesBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/errorSelfieRetryButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/errorSelfieRetryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:height="64dp"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="@{selfieErrorFragment::onErrorRetrySelfieButtonClick}"
                android:text="@string/retry"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelSelfieButton"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/selfie_error_image"
            android:src="@drawable/ic_baseline_error_24"
            app:layout_constraintBottom_toTopOf="@+id/selfieResultsButtonLayout"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.66"
            app:tint="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/selfieErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/it_was_not_possible_to_verify_your_identity"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/selfieResultsButtonLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>